--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Options/OptionPageControl.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Options/OptionPageControl.xaml
@@ -4,16 +4,30 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Options"
-             mc:Ignorable="d" Height="383.7" Width="486.8">
-    <Grid Margin="0,0,-0.6,0">
-        <CheckBox x:Name="EnableMetricCheck" Content="I agree to share my usage data with Porting Assistant&#xD;&#xA;for .NET and receive emails regarding  feedback on the tool.&#xD;&#xA;" HorizontalAlignment="Left" Margin="8,153,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked" RenderTransformOrigin="-1.024,-1.743" Width="351"/>
-        <TextBox x:Name="CustomerEmailText" HorizontalAlignment="Left" Height="23" Margin="10,339,0,0" TextWrapping="Wrap" Text="customer@email.com" VerticalAlignment="Top" Width="235"/>
-        <Label Content="Porting Assistant Extension&#xD;&#xA;" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Height="59"/>
-        <Label Content="This is a description of the extension" HorizontalAlignment="Left" Margin="8,69,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.12,0.601"/>
-        <Label Content="When you shar eyour usage data.......&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.742,0.145"/>
-        <Label Content="Email" HorizontalAlignment="Left" Margin="10,308,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.19,-0.066" FontWeight="Bold"/>
-        <Button Content="Cache location....." HorizontalAlignment="Left" Margin="217,281,0,0" VerticalAlignment="Top" Width="118" Height="27" Click="Button_Click_1"/>
-        <ComboBox x:Name="TargeFrameworks" HorizontalAlignment="Left" Margin="10,281,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged"/>
-
+             mc:Ignorable="d" Height="283.5" Width="640">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <GroupBox Header="Porting Assistant for .NET" HorizontalAlignment="Left" Height="264" Margin="10,10,0,0" Grid.RowSpan="4" VerticalAlignment="Top" Width="465" FontSize="14"/>
+        <GroupBox Header="Target Framework" HorizontalAlignment="Left" Height="79" Margin="10,137,0,0" Grid.Row="3" VerticalAlignment="Top" Width="465"/>
+        <Button Content="Clear assessment cache" HorizontalAlignment="Left" Margin="319,230,0,0" VerticalAlignment="Top" Width="139" Height="27" Grid.Row="3" RenderTransformOrigin="0.964,0.741"/>
+        <ComboBox x:Name="TargeFrameworks" HorizontalAlignment="Left" Margin="20,183,0,0" VerticalAlignment="Top" Width="299" Grid.Row="3"/>
+        <ScrollViewer HorizontalAlignment="Left" Height="85" Margin="2,37,0,0" Grid.Row="3" VerticalAlignment="Top" Width="455" RenderTransformOrigin="0.5,0.5">
+            <ScrollViewer.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.12"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.498"/>
+                </TransformGroup>
+            </ScrollViewer.RenderTransform>
+            <TextBlock TextWrapping="Wrap" VerticalAlignment="Top" Padding="20" Height="149" Width="446" ><Run BaselineAlignment="Center" Text="Porting Assistant for .NET is a compatibility scanner that reduces the manual effort required to port Microsoft .NET Framework applications to .NET Core. The Porting Assistant for .NET assesses the .NET application source code and identifies incompatible APIs and third-party packages. Where applicable, the Porting Assistant for .NET also provides replacement suggestions that are compatible with .NET Core."/><LineBreak/><LineBreak/></TextBlock>
+        </ScrollViewer>
+        <Label Content="choose a target .NET framework to port your solution" HorizontalAlignment="Left" Margin="20,157,0,0" Grid.Row="3" VerticalAlignment="Top" Width="455" Opacity="0.6"/>
     </Grid>
 </UserControl>
