--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/AddProfileDialog.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/AddProfileDialog.xaml
@@ -7,18 +7,30 @@
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
              mc:Ignorable="d" Height="380" Width="630">
     <Grid>
-        <Button Content="Save Profile" HorizontalAlignment="Left" Margin="497,301,0,0" VerticalAlignment="Top" Width="88" Click="Button_Click" Height="26"/>
-        <Label Content="Profile name" HorizontalAlignment="Left" Margin="161,74,0,0" VerticalAlignment="Top" Width="83" RenderTransformOrigin="0.459,1.161"/>
-        <TextBox x:Name="ProfileName" HorizontalAlignment="Left" Height="20" Margin="161,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" IsEnabled="True" AutomationProperties.HelpText="please enter profile name"/>
-        <Label Content="AWS access key ID" HorizontalAlignment="Left" Margin="161,140,0,0" VerticalAlignment="Top" AutomationProperties.HelpText="Please enter AWS access key ID"/>
-        <Label Content="AWS secret access key" HorizontalAlignment="Left" Margin="161,209,0,0" VerticalAlignment="Top" Width="158"/>
-        <TextBox x:Name="AccesskeyID" HorizontalAlignment="Left" Height="23" Margin="161,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288"/>
-        <TextBox x:Name="secretAccessKey" HorizontalAlignment="Left" Height="23" Margin="161,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" AutomationProperties.HelpText="Please enter AWS secret access key"/>
-        <Label x:Name="WarningSecretKey" Content="" HorizontalAlignment="Left" Margin="161,263,0,0" VerticalAlignment="Top" Width="288" Foreground="Red" FontSize="10" Height="20"/>
-        <Label x:Name="WarningAccessKeyID"  Content="" HorizontalAlignment="Left" Margin="161,189,0,0" VerticalAlignment="Top" FontSize="10" Width="288" Foreground="Red" Height="20"/>
-        <Label x:Name="WarningProfileName"  Content="" HorizontalAlignment="Left" Margin="161,120,0,0" VerticalAlignment="Top" Width="288" FontSize="10" Foreground="Red" Height="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="A named profile is a collection of settings and credentials that you can apply to an AWS CLI command. Adding a named profile allows Porting Assistant for .NET to access your solution for .NET Core compatibility. Specify the following information to add a profile or use the AWS CLI." VerticalAlignment="Top" Height="59" Width="622"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="383,301,0,0" VerticalAlignment="Top" Width="92" Height="26" Background="{x:Null}" BorderThickness="0" Click="Button_Click_1"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock HorizontalAlignment="Stretch" Margin="10,10,10,10" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0">
+            <Run Text="A named profile is a collection of settings and credentials that you can apply to an AWS CLI command. Adding a named profile allows Porting Assistant for .NET to access your solution for .NET Core compatibility. Specify the following information to add a profile or use the AWS CLI."></Run>
+            <Hyperlink NavigateUri="https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration">learn more</Hyperlink>
+        </TextBlock>
+        <Label Content="Profile name" HorizontalAlignment="Left" Margin="50,0,0,0" VerticalAlignment="Top" Width="150" Height="30" Grid.Column="0" Grid.Row="1"/>
+        <TextBox x:Name="ProfileName" HorizontalAlignment="Left"  Margin="50,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="30" Grid.Column="0" Grid.Row="1" IsEnabled="True" AutomationProperties.HelpText="please enter profile name"/>
+        <Label x:Name="WarningProfileName"  Content="" HorizontalAlignment="Left" Margin="50,60,0,0" VerticalAlignment="Top" Width="300" Height="30" FontSize="10" Foreground="Red"  Grid.Column="0" Grid.Row="1"/>
+        <Label Content="AWS access key ID" HorizontalAlignment="Left" Margin="50,0,0,0" VerticalAlignment="Top" Width="150" Height="30" Grid.Column="0" Grid.Row="2" AutomationProperties.HelpText="Please enter AWS access key ID"/>
+        <TextBox x:Name="AccesskeyID" HorizontalAlignment="Left" Margin="50,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="30" Grid.Column="0" Grid.Row="2"/>
+        <Label x:Name="WarningAccessKeyID"  Content="" HorizontalAlignment="Left" Margin="50,60,0,0" VerticalAlignment="Top" FontSize="10" Width="300" Foreground="Red" Height="20" Grid.Column="0" Grid.Row="2"/>
+        <Label Content="AWS secret access key" HorizontalAlignment="Left" Margin="50,0,0,0" VerticalAlignment="Top" Width="150" Height="30" Grid.Column="0" Grid.Row="3"/>
+        <TextBox x:Name="secretAccessKey" HorizontalAlignment="Left"  Margin="50,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="30" Grid.Column="0" Grid.Row="3" AutomationProperties.HelpText="Please enter AWS secret access key"/>
+        <Label x:Name="WarningSecretKey" Content="" HorizontalAlignment="Left" Margin="50,60,0,0" VerticalAlignment="Top" Width="300" Height="30" Foreground="Red" FontSize="10" Grid.Column="0" Grid.Row="3"/>
+        <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,110,10" VerticalAlignment="Center" Width="90" Height="30" Background="{x:Null}" BorderThickness="0" Click="Button_Click_1" Grid.Column="0" Grid.Row="4"/>
+        <Button Content="Save Profile" HorizontalAlignment="Right" Margin="10,10,20,10" VerticalAlignment="Center" Width="90" Height="30" Click="Button_Click" Grid.Column="0" Grid.Row="4"/>
     </Grid>
 </ui:DialogWindow>
