--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/SelectTargetDialog.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/SelectTargetDialog.xaml
@@ -5,14 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:ui="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
-             mc:Ignorable="d" Height="180" Width="470">
-    <Grid Margin="0,0,0,0" Height="151" VerticalAlignment="Top">
-        <Label Content="Choose a Target Framework" HorizontalAlignment="Left" Margin="3,-28,0,0" VerticalAlignment="Top" Width="238" FontWeight="Bold"/>
-        <GroupBox Header="Target Framework" Height="102" Margin="0,3,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="431">
-            <ComboBox x:Name="TargetFrameWorkDropDown" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Width="263"/>
+             mc:Ignorable="d" Height="180" Width="480">
+    <Grid Margin="0,0,0,0" VerticalAlignment="Top">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <GroupBox Header="Target Framework"  Margin="10,0,10,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="0">
+            <ComboBox x:Name="TargetFrameWorkDropDown" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Width="260"/>
         </GroupBox>
-        <Label x:Name="ChooseFrameworkLabel" Content="choose a target .NET framework to port your solution" HorizontalAlignment="Left" Margin="25,36,-27,0" VerticalAlignment="Top" Width="455" Opacity="0.6" FontSize="10"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="370,115,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="OK" HorizontalAlignment="Left" Margin="280,115,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label x:Name="ChooseFrameworkLabel" Content="choose a target .NET framework to port your solution" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Margin="25,35,-25,0" Opacity="0.6" FontSize="10"/>
+        <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,95,20" VerticalAlignment="Top" Width="75" Grid.Column="0" Grid.Row="1" Click="Button_Click_1"/>
+        <Button Content="OK" HorizontalAlignment="Right" Margin="10,10,10,20" VerticalAlignment="Top" Width="75" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
     </Grid>
 </ui:DialogWindow>
