--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/PortingDialog.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/PortingDialog.xaml
@@ -15,9 +15,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Grid.ColumnSpan="2" Content="Warning:" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Grid.Column="0" Grid.Row="0"/>
-        <Label Content="Porting is final and cannot be undone. &#xA;" HorizontalAlignment="Left" Margin="100,15,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0"/>
-        <CheckBox x:Name="ApplyPortActionCheck" Content="Select check box to apply recommended source code changes &#xD;&#xA;(indicated by wavy underlines in your source code).&#xA;" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
+
+        <Image x:Name="InfoSign" Source="../Resources/StatusInformation.png" HorizontalAlignment="Left" Margin="10,20,0,20" VerticalAlignment="Top" Height="25" Width="25" Grid.Column="0" Grid.Row="0"></Image>
+        
+        <Label Content="Porting is final and cannot be undone." HorizontalAlignment="Left" Margin="40,15,0,20" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" FontSize="14"/>
+        <CheckBox x:Name="ApplyPortActionCheck" Content="  Select check box to apply recommended source code changes &#xD;&#xA;  (indicated by wavy underlines in your source code).&#xA;" HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
         <Button Content="Port" HorizontalAlignment="Right" Margin="10,10,10,20" VerticalAlignment="Top" Width="75" Grid.Column="0"  Grid.Row="2" Height="20" Click="Button_Click_1"/>
         <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,95,20" VerticalAlignment="Top" Width="75" Grid.Column="0"  Grid.Row="2" Height="20" Click="Button_Click"/>
     </Grid>
