switch to mainline

--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/AddProfileDialog.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Dialogs/AddProfileDialog.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <TextBlock HorizontalAlignment="Stretch" Margin="10,10,10,10" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0">
             <Run Text="A named profile is a collection of settings and credentials that you can apply to an AWS CLI command. Adding a named profile allows Porting Assistant for .NET to access your solution for .NET Core compatibility. Specify the following information to add a profile or use the AWS CLI."></Run>
-            <Hyperlink NavigateUri="https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration">learn more</Hyperlink>
+            <Hyperlink NavigateUri="https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration" Click="Hyperlink_Click">learn more</Hyperlink>
         </TextBlock>
         <Label Content="Profile name" HorizontalAlignment="Left" Margin="50,0,0,0" VerticalAlignment="Top" Width="150" Height="30" Grid.Column="0" Grid.Row="1"/>
         <TextBox x:Name="ProfileName" HorizontalAlignment="Left"  Margin="50,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="30" Grid.Column="0" Grid.Row="1" IsEnabled="True" AutomationProperties.HelpText="please enter profile name"/>
@@ -30,7 +30,7 @@
         <Label Content="AWS secret access key" HorizontalAlignment="Left" Margin="50,0,0,0" VerticalAlignment="Top" Width="150" Height="30" Grid.Column="0" Grid.Row="3"/>
         <TextBox x:Name="secretAccessKey" HorizontalAlignment="Left"  Margin="50,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="30" Grid.Column="0" Grid.Row="3" AutomationProperties.HelpText="Please enter AWS secret access key"/>
         <Label x:Name="WarningSecretKey" Content="" HorizontalAlignment="Left" Margin="50,60,0,0" VerticalAlignment="Top" Width="300" Height="30" Foreground="Red" FontSize="10" Grid.Column="0" Grid.Row="3"/>
-        <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,110,10" VerticalAlignment="Center" Width="90" Height="30" Background="{x:Null}" BorderThickness="0" Click="Button_Click_1" Grid.Column="0" Grid.Row="4"/>
-        <Button Content="Save Profile" HorizontalAlignment="Right" Margin="10,10,20,10" VerticalAlignment="Center" Width="90" Height="30" Click="Button_Click" Grid.Column="0" Grid.Row="4"/>
+        <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,110,20" VerticalAlignment="Bottom" Width="90" Height="30" Background="{x:Null}" BorderThickness="0" Click="Button_Click_1" Grid.Column="0" Grid.Row="4"/>
+        <Button Content="Save Profile" HorizontalAlignment="Right" Margin="10,10,20,20" VerticalAlignment="Bottom" Width="90" Height="30" Click="Button_Click" Grid.Column="0" Grid.Row="4"/>
     </Grid>
 </ui:DialogWindow>
