--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Options/DataSharingOptionPage.xaml
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/Options/DataSharingOptionPage.xaml
@@ -5,27 +5,25 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Options"
              mc:Ignorable="d" 
-             d:DesignHeight="283.5" d:DesignWidth="640">
+             d:DesignHeight="300" d:DesignWidth="465" Height="300" Width="465">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <GroupBox Header="Porting Assistant for .NET data usage sharing" HorizontalAlignment="Left" Height="129" Margin="10,150,0,0" Grid.Row="3" VerticalAlignment="Top" Width="453" FontWeight="Bold"/>
-
-        <GroupBox Header="Porting Assistant for .NET" HorizontalAlignment="Left" Height="257" Margin="10,17,0,0" Grid.Row="3" VerticalAlignment="Top" Width="453" FontSize="14">
-            <Button Content="Add a named profile" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Width="140" Height="20" FontSize="12" Background="{x:Null}" BorderThickness="0" Cursor="Hand" Foreground="Blue" Click="Button_Click"/>
-
+        <GroupBox Header="Porting Assistant For .NET" HorizontalAlignment="Left" Height="300" Margin="0,10,0,0" Grid.RowSpan="4" VerticalAlignment="Top" Width="465" FontSize="14">
         </GroupBox>
-        <ComboBox x:Name="Profiles" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="266" Height="22" Margin="23,106,0,0" Grid.Row="3"/>
-        <CheckBox x:Name="EnableMetricCheck" Content="I agree to share my usage data with Porting Assistant for .NET and receive &#xD;&#xA;emails regarding feedback on the tool." HorizontalAlignment="Left" Margin="23,46,0,0" Grid.Row="3" VerticalAlignment="Top" Checked="CheckBox_Checked" Height="39" Width="423"/>
-        <ScrollViewer HorizontalAlignment="Left" Height="97" Margin="0,167,0,0" Grid.Row="3" VerticalAlignment="Top" Width="446">
-            <TextBlock TextWrapping="Wrap" VerticalAlignment="Top" Padding="10" Height="267" ><Run BaselineAlignment="Center" Text="When you share your usage data, Porting Assistant for .NET will collect information only about the public NuGet packages, APIs, build errors and stack traces. This information is used to make the Porting Assistant for .NET product better, for example, to improve the package and API replacement recommendations. Porting Assistant for .NET does not collect any identifying information about you. "/><Hyperlink NavigateUri="https://docs.aws.amazon.com/portingassistant/latest/userguide/how-porting-assistant-works.html#porting-assistant-information-collected">To learn more, see Information Collected</Hyperlink><LineBreak/><Run BaselineAlignment="Center"/><LineBreak/><Run Text="The Porting Assistant for .NET tool is licensed as AWS Content under the terms and conditions of the AWS Customer Agreement located at Agreement and the Service Terms located at Service-Terms. By installing, using or accessing the Porting Assistant for .NET tool, you agree to such terms and conditions. The term AWS Content does not include software and assets distributed under separate license terms (such as code licensed under an open source license)."/></TextBlock>
+        <CheckBox x:Name="EnableMetricCheck" Content="I agree to share my usage data with Porting Assistant for .NET and receive &#xD;&#xA;emails regarding feedback on the tool." HorizontalAlignment="Left" Margin="20,50,0,0" Grid.Row="0" VerticalAlignment="Top" Checked="CheckBox_Checked" Height="40" Width="423"/>
+        <Label Content="AWS named profile" HorizontalAlignment="Left" Margin="20,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="117"/>
+        <ComboBox x:Name="Profiles" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="266" Height="22" Margin="20,40,0,0" Grid.Row="1"/>
+        <Button Content="Add a named profile" HorizontalAlignment="Left" Margin="10,70,0,0" Grid.Row="1" VerticalAlignment="Top" Width="140" Height="20" FontSize="12" Background="{x:Null}" BorderThickness="0" Cursor="Hand" Foreground="Blue" Click="Button_Click"/>
+        <GroupBox Header="Porting Assistant for .NET data usage sharing" HorizontalAlignment="Left" Height="120" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="465" FontWeight="Bold"/>
+        <ScrollViewer HorizontalAlignment="Left" Height="100" Margin="0,28,0,0" Grid.Row="2" VerticalAlignment="Top" Width="460">
+            <TextBlock TextWrapping="Wrap" VerticalAlignment="Top" Padding="10" Height="250" ><Run BaselineAlignment="Center" Text="When you share your usage data, Porting Assistant for .NET will collect information only about the public NuGet packages, APIs, build errors and stack traces. This information is used to make the Porting Assistant for .NET product better, for example, to improve the package and API replacement recommendations. Porting Assistant for .NET does not collect any identifying information about you. "/><Hyperlink NavigateUri="https://docs.aws.amazon.com/portingassistant/latest/userguide/how-porting-assistant-works.html#porting-assistant-information-collected">To learn more, see Information Collected</Hyperlink><LineBreak/><Run BaselineAlignment="Center"/><LineBreak/><Run Text="The Porting Assistant for .NET tool is licensed as AWS Content under the terms and conditions of the AWS Customer Agreement located at Agreement and the Service Terms located at Service-Terms. By installing, using or accessing the Porting Assistant for .NET tool, you agree to such terms and conditions. The term AWS Content does not include software and assets distributed under separate license terms (such as code licensed under an open source license)."/></TextBlock>
         </ScrollViewer>
-        <Label Content="AWS named profile" HorizontalAlignment="Left" Margin="23,80,0,0" Grid.Row="3" VerticalAlignment="Top" Width="117"/>
+        
 
     </Grid>
 </UserControl>
